--- a/server/views/partials/main_nav.ejs
+++ b/server/views/partials/main_nav.ejs
@@ -71,6 +71,17 @@ Date: Feb-10-2021
                                           Contact</a>
                                       </li>
                                       <% } %>
+                                      <%if (title=="Login" ) { %>
+                                    <li class="nav-item active">
+                                      <a class="nav-link" href="/businesscontacts/login"><i class="fas fa-2x fa-sign-in-alt"></i>
+                                        Login</a>
+                                    </li>
+                                    <% } else{ %>
+                                      <li class="nav-item">
+                                        <a class="nav-link" href="/businesscontacts/login"><i class="fas fa-2x fa-sign-in-alt"></i>
+                                          Login</a>
+                                      </li>
+                                      <% } %>
       </div>
    
   </nav>
