added javascript for delete confirmation box.Also added update logic for business contacts
added javascript for delete confirmation box.Also added update logic for business contacts

--- a/server/views/businesscontacts/businesscontacts.ejs
+++ b/server/views/businesscontacts/businesscontacts.ejs
@@ -34,4 +34,4 @@ non-UI elements. This contains only <head> tags
 <%- include ../partials/bottom_nav.ejs %>
 
 <!-- This contains non-UI elements. But closing of body and html tags.--> 
-<%- include ../partials/header.ejs %>
+<%- include ../partials/footer.ejs %>
