--- a/server/views/businesscontacts/partials/addbusinesscontacts.ejs
+++ b/server/views/businesscontacts/partials/addbusinesscontacts.ejs
@@ -23,9 +23,9 @@
                             <input type="text" class="form-control" name="contactemail" id="contactemail" placeholder="Email"
                                 value="<%= contacttoedit.email %>" required>
                         </div>
-                        <button type="submit" class="btn btn-primary" onclick="Clearform">Submit</button>
-                        <a class="btn btn-warning">
-                            <i class="fas fa-undo"></i> Cancel
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <a class="btn btn-warning" onclick="Clearform()">
+                            <i class="fas fa-undo" ></i> Clear
                         </a>
                     </form>
                 </div>
