--- a/server/views/businesscontacts/partials/addbusinesscontacts.ejs
+++ b/server/views/businesscontacts/partials/addbusinesscontacts.ejs
@@ -8,24 +8,28 @@
                 </h4>
 
                 <div class="container">
-                    <form id="addcontact" action="/businesscontacts/upsertcontact" method="POST">
+                    <form id="addcontact" method="POST">
                         <div class="form-group">
 
-                            <input type="name" class="form-control" name="contactname" id="contactname" aria-describedby="emailHelp"
-                                value="<%= contacttoedit.name %>" placeholder="Name" required>
+                            <input type="name" class="form-control" name="contactname" id="contactname"
+                                aria-describedby="emailHelp" value="<%= contacttoedit.name %>" placeholder="Name"
+                                required>
                         </div>
                         <div class="form-group">
 
-                            <input type="text" class="form-control" name="contactphone" id="contactphone" placeholder="Phone"
-                                value="<%= contacttoedit.contact %>" required>
+                            <input type="text" class="form-control" name="contactphone" id="contactphone"
+                                placeholder="Phone" value="<%= contacttoedit.contact %>" required>
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" name="contactemail" id="contactemail" placeholder="Email"
-                                value="<%= contacttoedit.email %>" required>
+                            <input type="text" class="form-control" name="contactemail" id="contactemail"
+                                placeholder="Email" value="<%= contacttoedit.email %>" required>
                         </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" formaction="/businesscontacts/upsertcontact" name="submit"
+                            class="btn btn-primary">Submit</button>
+                        <button type="submit" formmethod="GET" formaction="/businesscontacts/deletecontact/<%= contacttoedit._id %>"
+                            onclick="return showwarning()" class="btn btn-danger">Delete</button>
                         <a class="btn btn-warning" onclick="Clearform()">
-                            <i class="fas fa-undo" ></i> Clear
+                            <i class="fas fa-undo"></i> Clear
                         </a>
                     </form>
                 </div>
