--- a/server/views/businesscontacts/businesscontacts.ejs
+++ b/server/views/businesscontacts/businesscontacts.ejs
@@ -16,7 +16,7 @@ non-UI elements. This contains only <head> tags
 <section class="businesscontacts-area">
     <div class="container">
         <h2 class="text-uppercase pt-5">
-            business contacts
+          <span> business contacts</span> 
         </h2>
         <hr>
         <div class="row">
