--- a/server/views/businesscontacts/partials/listbusinesscontacts.ejs
+++ b/server/views/businesscontacts/partials/listbusinesscontacts.ejs
@@ -1,9 +1,9 @@
 <section>
     
         
-            <h4>
-                Contact List
-            </h4>
+            <h3>
+              <span>Contact List</span>  
+            </h3>
             <table class="table table-bordered table-striped table-hover">
                 <!--    Header row-->
                 <tr>
