--- a/server/views/error.ejs
+++ b/server/views/error.ejs
@@ -17,7 +17,9 @@ non-UI elements. This contains only <head> tags
       <h1>
         Something went wrong
       </h1> 
-     
+      <h2>
+        <%=message  %>
+      </h2>
     </div>
 
 <!-- render a copyright content for all requests.--> 
