--- a/server/views/partials/main_nav.ejs
+++ b/server/views/partials/main_nav.ejs
@@ -73,12 +73,12 @@ Date: Feb-10-2021
                                       <% } %>
                                       <%if (title=="Login" ) { %>
                                     <li class="nav-item active">
-                                      <a class="nav-link" href="/businesscontacts/getallcontacts"><i class="fas fa-2x fa-sign-in-alt"></i>
+                                      <a class="nav-link" href="/businesscontacts/login"><i class="fas fa-2x fa-sign-in-alt"></i>
                                         Login</a>
                                     </li>
                                     <% } else{ %>
                                       <li class="nav-item">
-                                        <a class="nav-link" href="/businesscontacts/getallcontacts"><i class="fas fa-2x fa-sign-in-alt"></i>
+                                        <a class="nav-link" href="/businesscontacts/login"><i class="fas fa-2x fa-sign-in-alt"></i>
                                           Login</a>
                                       </li>
                                       <% } %>
