--- a/server/views/businesscontacts/partials/addbusinesscontacts.ejs
+++ b/server/views/businesscontacts/partials/addbusinesscontacts.ejs
@@ -3,9 +3,9 @@
     <div class="container">
         <div class="row">
             <div class="offset-md-2 col-md-8">
-                <h4>
-                    Add/Edit Contact
-                </h4>
+                <h3>
+                  <span>Add/Edit Contact</span>  
+                </h3>
 
                 <div class="container">
                     <form id="addcontact" method="POST">
