fixed card heights in projects page
fixed card heights in projects page

--- a/server/views/partials/projects.ejs
+++ b/server/views/partials/projects.ejs
@@ -14,7 +14,7 @@ Date: Feb-10-2021
         </h2>
         <hr>
         <div class="row">
-            <div class="card-columns">
+            <div class="card-deck">
                 <div class="card bg-light">
                     <img src="/Content/images/cassava.jpg" class="card-img-top" alt="...">
                     <div class="card-body ">
@@ -23,7 +23,7 @@ Date: Feb-10-2021
                         <p class="card-text" style="font-style: italic; color: gray">
                             technologies: python, tensorflow
                         </p>
-                        <div class="text-center">
+                        <div  class="text-center">
                             <a href="https://www.kaggle.com/c/cassava-leaf-disease-classification"
                                 class="btn btn-primary btn-dark">View in github</a>
                         </div>
@@ -34,7 +34,7 @@ Date: Feb-10-2021
                     <div class="card-body ">
                         <img src="/Content/images/tweet.png" class="card-img-top" alt="...">
                         <h5 class="card-title text-center">NLP with Disaster Tweets</h5>
-                        <p class="card-text">Kaggle competition to an NLP build ML model to classify if disasters tweets are real or fake. My work is in top 20 % of Leaderboard.</p>
+                        <p class="card-text">Kaggle competition to build an NLP build ML model to classify if disasters tweets are real or fake. My submission is in top 20 % of Leaderboard.</p>
                         <p class="card-text" style="font-style: italic; color: gray"> 
                             technologies: python, tensorflow
                         </p>
@@ -58,11 +58,11 @@ Date: Feb-10-2021
                         </div>
                     </div>
                 </div>
-                <div class="shadow  card bg-light">
+                <div class="card bg-light">
                     <img src="/Content/images/yelp.png" class="card-img-top" alt="...">
                     <div class="card-body ">
                         <h5 class="card-title text-center">Toronto Yelp Reviews Analysis</h5>
-                        <span class="card-text">Data Analysis of Toronto's business, review and User data to identify any pattern. This will help business owners to make business decisions.</span>
+                        <p class="card-text">Data Analysis of Toronto's business, reviews and User data to identify hidden pattern. This will help business owners to make better business decisions.</p>
                         <p class="card-text" style="font-style: italic; color: gray">
                             technologies: spark, mongodb, ML Flow
                         </p>
@@ -76,7 +76,7 @@ Date: Feb-10-2021
                     <img src="/Content/images/wumpus.png" class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title text-center">Wumpus World</h5>
-                        <span>Build an Intelligent knowledge-based agent to play and win the Wumpus World game.</span>
+                        <p class="card-text">Build an intelligent knowledge-based agent to play Wumpus World game.</p>
                         <p class="card-text" style="font-style: italic; color: gray">
                             technologies: python, tensorflow
                         </p>
