added routes and controllers for login and registration. also added passport authentication using local strategy. DB used is mongocloud
added routes and controllers for login and registration. also added passport authentication using local strategy. DB used is mongocloud

--- a/server/views/auth/login.ejs
+++ b/server/views/auth/login.ejs
@@ -2,48 +2,40 @@
 
 <%- include ../partials/main_nav.ejs %>
 <section class="login-area">
-<main class="container">
-    <!-- Message Area -->
-    <% if(messages.length > 0) {%>
-        <div class="alert alert-danger">
-            <%= messages %>
+<div class="mt-3">
+  <div class="col-md-4 m-auto">
+    <div class="card card-body">
+      <h1 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i>  Login</h1>
+     <%- include('../partials/messages'); %>
+      <form action="/users/login" method="POST">
+        <div class="form-group">
+          
+          <input
+            type="username"
+            id="username"
+            name="username"
+            class="form-control"
+            placeholder="Username"
+          />
         </div>
-    <% } %>
-<h2 class="text-uppercase"><span class="text-center">Login</span> </h2>
-            <hr>
-    <div class="row">
-        
-        <div class="offset-md-4 col-md-4">
-            
-            <form method="POST" autocomplete="off">
-                <fieldset class="form-group">
-                    
-                    <input type="text" class="form-control"
-                    name="username" placeholder="Enter username"
-                    id="username" required autofocus>
-                </fieldset>
-
-                <fieldset class="form-group">
-                    
-                    <input type="password" class="form-control"
-                    name="password" placeholder="Enter password"
-                    id="password" required>
-                    or
-                    <a href="/businesscontacts/register">Register Here</a>
-                </fieldset>
-
-                <fieldset class="form-group text-right">
-                    <input type="submit" class="btn btn-success" value="Login">
-                    <a href="/">
-                        <input type="button" class="btn btn-warning" value="Cancel">
-                    </a>
-                </fieldset>
-
-            </form>
+        <div class="form-group">
+         
+          <input
+            type="password"
+            id="password"
+            name="password"
+            class="form-control"
+            placeholder="Enter Password"
+          />
         </div>
+        <button type="submit" class="btn btn-primary btn-block">Login</button>
+      </form>
+      <p class="lead mt-4">
+        No Account? <a href="/users/register">Register</a>
+      </p>
     </div>
-
-</main>
+  </div>
+</div>
 </section>
 <%- include ../partials/bottom_nav.ejs %>  
 
