--- a/server/views/auth/register.ejs
+++ b/server/views/auth/register.ejs
@@ -2,57 +2,42 @@
 
     <%- include ../partials/main_nav.ejs %>
         <section class="register-area">
-            <main class="container">
-                <!-- Message Area -->
-                <% if(messages.length> 0) {%>
-                    <div class="alert alert-danger">
-                        <%= messages %>
+            <div class="mt-3">
+                <div class="col-md-4 m-auto">
+                    <div class="card card-body">
+                        <h1 class="text-center mb-3">
+                            <i class="fas fa-user-plus"></i> Register
+                        </h1>
+                        <%- include('../partials/messages'); %>
+                            <form action="/users/register" method="POST">
+                                <div class="form-group">
+
+                                    <input type="username" id="username" name="username" class="form-control"
+                                        placeholder="Name" />
+                                </div>
+                                <div class="form-group">
+
+                                    <input type="email" id="email" name="email" class="form-control"
+                                        placeholder="Email" />
+                                </div>
+                                <div class="form-group">
+
+                                    <input type="password" id="password" name="password" class="form-control"
+                                        placeholder="Password" />
+                                </div>
+                                <div class="form-group">
+
+                                    <input type="displayName" id="displayName" name="displayName" class="form-control"
+                                        placeholder="Display Name" />
+                                </div>
+                                <button type="submit" class="btn btn-primary btn-block">
+                                    Register
+                                </button>
+                            </form>
+                            <p class="lead mt-4">Have An Account? <a href="/users/login">Login</a></p>
                     </div>
-                    <% } %>
-                        <h2 class="text-uppercase"><span class="text-center">Register</span> </h2>
-                        <hr>
-                        <div class="row">
-                            <div class="offset-md-4 col-md-4">
-
-                                <form method="POST" autocomplete="off">
-                                    <fieldset class="form-group">
-
-                                        <input type="text" class="form-control" name="username"
-                                            placeholder="Enter username" id="username" required autofocus>
-                                    </fieldset>
-
-                                    <fieldset class="form-group">
-
-                                        <input type="password" class="form-control" name="password"
-                                            placeholder="Enter password" id="password" required>
-                                    </fieldset>
-
-                                    <fieldset class="form-group">
-
-                                        <input type="email" class="form-control" name="email"
-                                            placeholder="Enter Email Address" id="email" required>
-                                    </fieldset>
-
-                                    <fieldset class="form-group">
-
-                                        <input type="text" class="form-control" name="displayName"
-                                            placeholder="Enter Display Name" id="displayName" required>
-                                    </fieldset>
-
-                                    <fieldset class="form-group text-right">
-                                        <input type="submit" class="btn btn-success" value="Register">
-                                        <a href="/">
-                                            <input type="button" class="btn btn-warning" value="Cancel">
-                                        </a>
-                                    </fieldset>
-
-                                </form>
-                            </div>
-                        </div>
-
-
-            </main>
-
+                </div>
+            </div>
         </section>
 
 
