--- a/server/views/businesscontacts/partials/listbusinesscontacts.ejs
+++ b/server/views/businesscontacts/partials/listbusinesscontacts.ejs
@@ -4,7 +4,7 @@
             <h3>
               <span>Contact List</span>  
             </h3>
-            <table class="table table-bordered table-striped table-hover">
+            <table class="table table-striped table-hover">
                 <!--    Header row-->
                 <tr>
                     <th class="text-center ">Name</th>
