--- a/server/views/contact.ejs
+++ b/server/views/contact.ejs
@@ -19,7 +19,7 @@ non-UI elements. This contains only <head> tags
             <span> Get In Touch </span>
         </h2>
         <hr>
-        <div class="row">
+        <div class="row animated fadeIn">
             <div class="col-sm-3">
                 <div class="paragraph">
                     <p>If you wanna talk to me about a project or just say hi,
