--- a/server/views/home.ejs
+++ b/server/views/home.ejs
@@ -16,7 +16,7 @@ non-UI elements. This contains only <head> tags
  <!-- Home section--> 
 <section>
   <div class="container" style="align-content: center;">
-    <div class="jumbotron" style="background-color: transparent;" >
+    <div class="jumbotron animated fadeIn" style="background-color: transparent;" >
         <h3 class="text-uppercase text-center title">Vaishali Siddeshwar</h3>
         <p class="text-center">do what you <span style="color: darkred;"> <i class="fas fa-x fa-heart">
 
