--- a/server/views/partials/about.ejs
+++ b/server/views/partials/about.ejs
@@ -10,7 +10,7 @@ Date: Feb-10-2021
     <div class="container">
         <div class="row">
             <div class="col-lg-6 col-md-12 align-self-center">
-                <div class="d-flex flex-column align-items-center">
+                <div class="d-flex flex-column align-items-center animated fadeIn">
                     <div class="col-md-6">
                         <div class="thumbnail">
                             <img src=" /Content/images/mypicture.jpg" alt="Lights" style="width:100%">
@@ -30,7 +30,7 @@ Date: Feb-10-2021
                     <span>Talking about myself</span>
                 </h2>
                 <hr>
-                <div class="paragraph py-4 w-75">
+                <div class="paragraph py-4 w-75 animated fadeIn">
                     <p class="para">
                         A web development engineer from Toronto, Canada who loves the internet sphere.
                         A whizz at website and UI Design. Always on the lookout for exciting projects to work on.
