--- a/server/views/partials/projects.ejs
+++ b/server/views/partials/projects.ejs
@@ -13,14 +13,13 @@ Date: Feb-10-2021
             <span>My Academic Projects</span>
         </h2>
         <hr>
-        <div class="row">
-            <div class="card-deck">
+            <div class="card-deck animated fadeIn">
                 <div class="card bg-light">
                     <img src="/Content/images/cassava.jpg" class="card-img-top" alt="...">
                     <div class="card-body ">
-                        <h5 class="card-title text-center">Cassava Leaf disease classification</h5>
-                        <p class="card-text"> Kaggle Competition to classify cassava image to 4 disease categories.</p>
-                        <p class="card-text" style="font-style: italic; color: gray">
+                        <h6 class="card-title text-center">Cassava Leaf disease classification</h6>
+                        <p >Kaggle Competition to classify leaves.</p>
+                        <p style="font-style: italic; color: gray">
                             technologies: python, tensorflow
                         </p>
                         <div  class="text-center">
@@ -33,9 +32,9 @@ Date: Feb-10-2021
 
                     <div class="card-body ">
                         <img src="/Content/images/tweet.png" class="card-img-top" alt="...">
-                        <h5 class="card-title text-center">NLP with Disaster Tweets</h5>
-                        <p class="card-text">Kaggle competition to build an NLP build ML model to classify if disasters tweets are real or fake. My submission is in top 20 % of Leaderboard.</p>
-                        <p class="card-text" style="font-style: italic; color: gray"> 
+                        <h6 class="card-title text-center">NLP with Disaster Tweets</h6>
+                        <p >Kaggle competition to classify if disasters tweets are real or fake. I am in top 20%.</p>
+                        <p  style="font-style: italic; color: gray"> 
                             technologies: python, tensorflow
                         </p>
                         <div class="text-center">
@@ -47,9 +46,9 @@ Date: Feb-10-2021
                 <div class="card bg-light">
                     <img src="/Content/images/melanoma.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title text-center">Melanoma Image Classification</h5>
-                        <p class="card-text">Kaggle competition to build a model to automate diagnosis of Melanoma of akin lesions.</p>
-                        <p class="card-text" style="font-style: italic; color: gray">
+                        <h6 class="card-title text-center">Melanoma Image Classification</h6>
+                        <p >Kaggle competition to identify Melanoma.</p>
+                        <p style="font-style: italic; color: gray">
                             technologies: python, tensorflow
                         </p>
                         <div class="text-center">
@@ -61,9 +60,9 @@ Date: Feb-10-2021
                 <div class="card bg-light">
                     <img src="/Content/images/yelp.png" class="card-img-top" alt="...">
                     <div class="card-body ">
-                        <h5 class="card-title text-center">Toronto Yelp Reviews Analysis</h5>
-                        <p class="card-text">Data Analysis of Toronto's business, reviews and User data to identify hidden pattern. This will help business owners to make better business decisions.</p>
-                        <p class="card-text" style="font-style: italic; color: gray">
+                        <h6 class="card-title text-center">Toronto Yelp Reviews Analysis</h6>
+                        <p >Data Analysis of business, reviews & User data and make better decisions.</p>
+                        <p  style="font-style: italic; color: gray">
                             technologies: spark, mongodb, ML Flow
                         </p>
                         <div class="text-center"> 
@@ -75,9 +74,9 @@ Date: Feb-10-2021
                 <div class="card bg-light">
                     <img src="/Content/images/wumpus.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title text-center">Wumpus World</h5>
-                        <p class="card-text">Build an intelligent knowledge-based agent to play Wumpus World game.</p>
-                        <p class="card-text" style="font-style: italic; color: gray">
+                        <h class="card-title text-center">Wumpus World</h>
+                        <p >Build an intelligent agent to play Wumpus World.</p>
+                        <p style="font-style: italic; color: gray">
                             technologies: python, tensorflow
                         </p>
                         <div class="text-center">
@@ -86,7 +85,7 @@ Date: Feb-10-2021
                         </div>
                     </div>
                 </div>
-            </div>
+            
 
         </div>
     </div>
