--- a/server/views/partials/services.ejs
+++ b/server/views/partials/services.ejs
@@ -23,9 +23,7 @@ Date: Feb-10-2021
             <span>My Services</span>
         </h2>
         <hr>
-        <div class="row">
-            <div class="container">
-                <div id="carouselservices" class="carousel slide" data-ride="carousel">
+                 <div id="carouselservices" class="carousel slide animated fadeIn" data-ride="carousel">
                     <ol class="carousel-indicators">
                         <li data-target="#carouselservices" data-slide-to="0" class="active"></li>
                         <li data-target="#carouselservices" data-slide-to="1"></li>
@@ -34,7 +32,7 @@ Date: Feb-10-2021
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img style="height:500px; width:100%;" src="/Content/images/french.jpg" alt="First slide">
+                            <img style="height:400px; width:100%;" src="/Content/images/french.jpg" alt="First slide">
                             <div class="carousel-caption d-none d-md-block">
                                 <h4>Teach French</h4>
                                 <span>I offer French tutoring all across the
@@ -43,7 +41,7 @@ Date: Feb-10-2021
                               </div>
                         </div>
                         <div class="carousel-item">
-                            <img style="height:500px; width:100%;" src="/Content/images/tutor.jpg" alt="Second slide">
+                            <img style="height:400px; width:100%;" src="/Content/images/tutor.jpg" alt="Second slide">
                             <div class="carousel-caption d-none d-md-block">
                                 <h4>Teach Math</h4>
                                 <span>I can explain mathematical concepts in simple terms. 
@@ -52,7 +50,7 @@ Date: Feb-10-2021
                               </div>
                         </div>
                         <div class="carousel-item">
-                            <img style="height:500px; width:100%;" src="/Content/images/webdesign.jpg" alt="Third slide">
+                            <img style="height:400px; width:100%;" src="/Content/images/webdesign.jpg" alt="Third slide">
                             <div class="carousel-caption d-none d-md-block">
                                 <h4 style="color: gold;">Web Design</h4>
                                 <span style="color: gold;">I understand what it takes to make a website
@@ -61,7 +59,7 @@ Date: Feb-10-2021
                               </div>
                         </div>
                         <div class="carousel-item">
-                            <img style="height:500px; width:100%;" src="/Content/images/proofreading.jpg" alt="Fourth slide">
+                            <img style="height:400px; width:100%;" src="/Content/images/proofreading.jpg" alt="Fourth slide">
                             <div class="carousel-caption d-none d-md-block">
                                 <h4>Proofread thesis</h4>
                                 <span> I review the style for thesis and make sure you didn't miss any key
@@ -77,8 +75,8 @@ Date: Feb-10-2021
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                     </a>
-                </div>
-            </div>
+                
+            
         </div>
     </div>
 </section>
