added default sorting functionality to business contacts.
added default sorting functionality to business contacts.

--- a/server/views/businesscontacts/partials/addbusinesscontacts.ejs
+++ b/server/views/businesscontacts/partials/addbusinesscontacts.ejs
@@ -21,7 +21,7 @@
                                 placeholder="Phone" value="<%= contacttoedit.contact %>" required>
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" name="contactemail" id="contactemail"
+                            <input type="email" class="form-control" name="contactemail" id="contactemail"
                                 placeholder="Email" value="<%= contacttoedit.email %>" required>
                         </div>
                         <button type="submit" formaction="/businesscontacts/upsertcontact" name="submit"
