--- a/server/views/home.ejs
+++ b/server/views/home.ejs
@@ -26,7 +26,7 @@ non-UI elements. This contains only <head> tags
         <h2>Hi !</h2>
         <p> Welcome to my Website. I'm a Toronto based Software Developer, 
           creative thinker & Data Science Enthusiast 
-        , also passionate about web development. 
+        , also passionate about web development. I am currently
          specializing in Artificial Intelligence. Click on the button below to know more.</p>
         <form action="/home" method="POST"> 
           <button type="submit" class="btn btn-primary btn-dark">About Me</button>
