--- a/server/views/businesscontacts/partials/listbusinesscontacts.ejs
+++ b/server/views/businesscontacts/partials/listbusinesscontacts.ejs
@@ -32,7 +32,7 @@
                         </td>
                         <td>
                             <a href="/businesscontacts/deletecontact/<%= contactList[count]._id %>"
-                                class="btn btn-danger btn-sm" id="btndelete" onclick="return showwarning()">
+                                class="btn btn-danger btn-sm" id="btndelete" onclick="return showconfirmationdialog()">
                                 <i class="fas fa-trash-alt"></i></a>
                         </td>
                     </tr>
