increased font sizes of About, Contact pages
increased font sizes of About, Contact pages

--- a/server/views/contact.ejs
+++ b/server/views/contact.ejs
@@ -21,7 +21,7 @@ non-UI elements. This contains only <head> tags
         <hr>
         <div class="row animated fadeIn">
             <div class="col-sm-3">
-                <div class="paragraph">
+                <div style="font-size: large;">
                     <p>If you wanna talk to me about a project or just say hi,
                         fill up the below form and let's talk.</p>
                                             
