--- a/server/views/partials/about.ejs
+++ b/server/views/partials/about.ejs
@@ -30,15 +30,15 @@ Date: Feb-10-2021
                     <span>Talking about myself</span>
                 </h2>
                 <hr>
-                <div class="paragraph py-4 w-75 animated fadeIn">
-                    <p class="para">
+                <div class="animated fadeIn">
+                    <p class="para" style="font-size: large;">
                         A web development engineer from Toronto, Canada who loves the internet sphere.
                         A whizz at website and UI Design. Always on the lookout for exciting projects to work on.
                         My specialty is full website design and development, turning wireframes into stunning, semantic
                         HTML & CSS.
                         My interests, however, extend beyond the web and I love machine learning and deep learning.
                     </p>
-                    <p class="para">
+                    <p class="para" style="font-size: large;">
                         When I'm not coding, I'm probably hanging out with my friends, or hiking or clicking photos.
                     </p>
                 </div>
