--- a/server/views/partials/services.ejs
+++ b/server/views/partials/services.ejs
@@ -32,37 +32,37 @@ Date: Feb-10-2021
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img style="height:400px; width:100%;" src="/Content/images/french.jpg" alt="First slide">
+                            <img style="height:300px; width:100%;" src="/Content/images/french.jpg" alt="First slide">
                             <div class="carousel-caption d-none d-md-block">
-                                <h4>Teach French</h4>
-                                <span>I offer French tutoring all across the
+                                <h2>Teach French</h2>
+                                <span style="font-size: large;">I offer French tutoring all across the
                                     Greater Toronto Area, to youth or adults at all levels and
                                     can prepare them for langauge exams.</span>
                               </div>
                         </div>
                         <div class="carousel-item">
-                            <img style="height:400px; width:100%;" src="/Content/images/tutor.jpg" alt="Second slide">
+                            <img style="height:300px; width:100%;" src="/Content/images/tutor.jpg" alt="Second slide">
                             <div class="carousel-caption d-none d-md-block">
-                                <h4>Teach Math</h4>
-                                <span>I can explain mathematical concepts in simple terms. 
+                                <h2>Teach Math</h2>
+                                <span style="font-size: large;">I can explain mathematical concepts in simple terms. 
                                     I can help to improve problem solving skills & 
                                     prepare you for tests and exams. </span>
                               </div>
                         </div>
                         <div class="carousel-item">
-                            <img style="height:400px; width:100%;" src="/Content/images/webdesign.jpg" alt="Third slide">
+                            <img style="height:300px; width:100%;" src="/Content/images/webdesign.jpg" alt="Third slide">
                             <div class="carousel-caption d-none d-md-block">
-                                <h4 style="color: gold;">Web Design</h4>
-                                <span style="color: gold;">I understand what it takes to make a website
+                                <h2 style="color: cadetblue;">Web Design</h2>
+                                <span  style="font-size: large; color: cadetblue;">I understand what it takes to make a website
                                  functional and easy to use and can help in 
                                  building or redesigning websites. </span>
                               </div>
                         </div>
                         <div class="carousel-item">
-                            <img style="height:400px; width:100%;" src="/Content/images/proofreading.jpg" alt="Fourth slide">
+                            <img style="height:300px; width:100%;" src="/Content/images/proofreading.jpg" alt="Fourth slide">
                             <div class="carousel-caption d-none d-md-block">
-                                <h4>Proofread thesis</h4>
-                                <span> I review the style for thesis and make sure you didn't miss any key
+                                <h2>Proofread thesis</h2>
+                                <span style="font-size: large;"> I review the style for thesis and make sure you didn't miss any key
                                     elements you must include.</span>
                               </div>
                         </div>
@@ -75,8 +75,6 @@ Date: Feb-10-2021
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                     </a>
-                
-            
         </div>
     </div>
 </section>
