--- a/server/views/home.ejs
+++ b/server/views/home.ejs
@@ -24,10 +24,10 @@ non-UI elements. This contains only <head> tags
         </span> what you do</p>
         <hr>
         <h2>Hi !</h2>
-        <p> Welcome to my Website. I'm a Toronto based Software Developer, 
+        <span style="font-size: x-large;"> Welcome to my Website. I'm a Toronto based Software Developer, 
           creative thinker & Data Science Enthusiast 
         , also passionate about web development. I am currently
-         specializing in Artificial Intelligence. Click on the button below to know more.</p>
+         specializing in Artificial Intelligence. Click on the button below to know more.</span>
         <form action="/home" method="POST"> 
           <button type="submit" class="btn btn-primary btn-dark">About Me</button>
       
